# tado_hijack_dev

./: .gitleaks.toml  .pre-commit-config.yaml  .releaserc  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: pr_tests.yml
custom_components/tado_hijack/: __init__.py  binary_sensor.py  button.py  climate.py  climate_entity.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  manifest.json  models.py  number.py  select.py  sensor.py  services.py  services.yaml  switch.py  water_heater.py
custom_components/tado_hijack/dummy/: __init__.py  const.py  dummy_handler.py
custom_components/tado_hijack/helpers/: api_manager.py  auth_manager.py  client.py  command_merger.py  data_manager.py  device_linker.py  discovery.py  entity_resolver.py  event_handlers.py  logging_utils.py  optimistic_manager.py  overlay_builder.py  overlay_validator.py  parsers.py  patch.py  property_manager.py  quota_math.py  rate_limit_manager.py  state_patcher.py  tado_request_handler.py  utils.py
custom_components/tado_hijack/translations/: de.json  en.json
docs/: DESIGN.md  DEVELOPMENT.md
scripts/: local_hacs_validate.py
