[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["testing_config/"]


# --- Poetry Configuration ---
[tool.poetry]
name = "tado_hijack"
version = "1.0.0"
description = "Tado Hijack: Exposing hidden API features like battery health, presence logic, and HVAC Auto to Home Assistant while strictly saving your 100-call daily limit."
authors = ["@banter240"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
homeassistant = ">=2024.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"
pytest-homeassistant-custom-component = "^0.13"

# Recommended development tools:
ruff = "^0.4.0"
mypy = "^1.9.0"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
